# ReMania-GameBox

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  annotated.html  annotated_dup.js  classRMGB_1_1Graphics_1_1APISpec-members.html  classRMGB_1_1Graphics_1_1APISpec.html  classRMGB_1_1Graphics_1_1APISpec.js  classRMGB_1_1Graphics_1_1Backend-members.html  classRMGB_1_1Graphics_1_1Backend.html  classRMGB_1_1Graphics_1_1Backend.js  classRMGB_1_1Graphics_1_1IndexBuffer-members.html  classRMGB_1_1Graphics_1_1IndexBuffer.html  classRMGB_1_1Graphics_1_1IndexBuffer.js  classRMGB_1_1Graphics_1_1OpenGL_1_1Backend-members.html  classRMGB_1_1Graphics_1_1OpenGL_1_1Backend.html  classRMGB_1_1Graphics_1_1OpenGL_1_1Shader-members.html  classRMGB_1_1Graphics_1_1OpenGL_1_1Shader.html  classRMGB_1_1Graphics_1_1OpenGL_1_1Shader.js  classRMGB_1_1Graphics_1_1PS3_1_1Backend-members.html  classRMGB_1_1Graphics_1_1PS3_1_1Backend.html  classRMGB_1_1Graphics_1_1Shader-members.html  classRMGB_1_1Graphics_1_1Shader.html  classRMGB_1_1Graphics_1_1Shader.js  classRMGB_1_1Graphics_1_1VertexArray-members.html  classRMGB_1_1Graphics_1_1VertexArray.html  classRMGB_1_1Graphics_1_1VertexArray.js  classRMGB_1_1Graphics_1_1VertexBuffer-members.html  classRMGB_1_1Graphics_1_1VertexBuffer.html  classRMGB_1_1Graphics_1_1VertexBuffer.js  classRMGB_1_1Graphics_1_1queue-members.html  classRMGB_1_1Graphics_1_1queue.html  classRMGB_1_1Graphics_1_1queue.js  classes.html  dir_0d83db124b4c65fd51dbbc49422810fd.html  (+25 more)
.github/workflows/: docs.yml
Docs/: Doxygen.cmake
include/RMGB/Graphics/: graphics.hpp
include/RMGB/Graphics/backends/: opengl.hpp  ps3.hpp
include/RMGB/Utils/: logger.hpp
psl1ght-integration/: imgui_impl_ps3.cpp  imgui_impl_ps3.h  psl1ght.cmake  rsxutil.cpp  rsxutil.h
samples/: CMakeLists.txt
samples/simple_program/: CMakeLists.txt  RMGB-Helper.cmake  main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/RMGB/Graphics/: graphics.cpp
src/RMGB/Graphics/backends/: opengl.cpp  ps3.cpp
src/RMGB/Shaders/OpenGL/: frag.glsl  vert.glsl
src/RMGB/Utils/: logger.cpp
